#Notifications commit
Для обеспечения уведомлений из сервиса cash, transfer:
- исправлены контроллеры.
- исправлены сервисы уведомлений.